<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="180dp">

            <LinearLayout
                android:layout_width="328dp"
                android:layout_height="128dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_an_account" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_your_account" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/it_s_quick_and_easy" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="552dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editTextFname"
                        android:layout_width="wrap_content"
                        android:layout_height="58dp"
                        android:ems="10"
                        android:hint="@string/first_name"
                        android:inputType="text" />

                    <EditText
                        android:id="@+id/editTextLname"
                        android:layout_width="wrap_content"
                        android:layout_height="58dp"
                        android:ems="10"
                        android:hint="@string/last_name"
                        android:inputType="text" />

                </LinearLayout>

                <EditText
                    android:id="@+id/editTextUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="username"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/editTextEmailaddress"
                    android:layout_width="322dp"
                    android:layout_height="46dp"
                    android:ems="10"
                    android:hint="@string/e_mail_address"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="312dp"
                    android:layout_height="47dp"
                    android:ems="10"
                    android:hint="@string/create_your_password"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/editTextConfirmpassword"
                    android:layout_width="300dp"
                    android:layout_height="51dp"
                    android:ems="10"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/btnSignup"
                    android:layout_width="285dp"
                    android:layout_height="47dp"
                    android:text="@string/sign_up" />

                <Button
                    android:id="@+id/btnBack"
                    android:layout_width="291dp"
                    android:layout_height="43dp"
                    android:text="@string/back_to_sign_in" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>