<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    tools:context=".LogIn">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="288dp"
                    android:layout_height="115dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="36dp" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_semibold"
                        android:text="@string/hello_guest"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_semibold"
                        android:text="@string/welcome_to_effortlist"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/before_you_continue_please_sign_in_first"
                        android:textSize="10sp" />

                </LinearLayout>

                <Space
                    android:id="@+id/space"
                    android:layout_width="379dp"
                    android:layout_height="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />


                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/space"
                    app:srcCompat="@drawable/untitled_design__3_" />

                <LinearLayout
                    android:id="@+id/linearLayout5"
                    android:layout_width="410dp"
                    android:layout_height="278dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:id="@+id/linearLayout4"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:layout_editor_absoluteX="0dp">

                            <Space
                                android:layout_width="match_parent"
                                android:layout_height="18dp" />

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="56dp">

                                <EditText
                                    android:id="@+id/editTextEmailaddress"
                                    android:layout_width="293dp"
                                    android:layout_height="44dp"
                                    android:background="@drawable/edittext_background"
                                    android:ems="10"
                                    android:hint="@string/username"
                                    android:inputType="textEmailAddress"
                                    android:textColorHint="#66000000"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />
                            </androidx.constraintlayout.widget.ConstraintLayout>

                            <Space
                                android:layout_width="match_parent"
                                android:layout_height="15dp" />

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="46dp">

                                <EditText
                                    android:id="@+id/editTextTextPassword"
                                    android:layout_width="289dp"
                                    android:layout_height="40dp"
                                    android:background="@drawable/edittext_background"
                                    android:ems="10"
                                    android:hint="@string/password"
                                    android:inputType="textPassword"
                                    android:textColorHint="#66000000"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintHorizontal_bias="0.504"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />
                            </androidx.constraintlayout.widget.ConstraintLayout>

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="48dp">

                                <LinearLayout
                                    android:id="@+id/linearLayout3"
                                    android:layout_width="357dp"
                                    android:layout_height="34dp"
                                    android:orientation="horizontal"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintHorizontal_bias="1.0"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent">

                                    <CheckBox
                                        android:id="@+id/checkBox2"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:text="@string/remember_me" />

                                    <TextView
                                        android:id="@+id/textView6"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:text="@string/forgot_password" />
                                </LinearLayout>
                            </androidx.constraintlayout.widget.ConstraintLayout>

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <Button
                                    android:id="@+id/button"
                                    android:layout_width="292dp"
                                    android:layout_height="50dp"
                                    android:text="@string/sign_in"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <TextView
                                    android:id="@+id/textView7"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/tap_here_if_you_don_t_have_an_account"
                                    tools:layout_editor_absoluteX="91dp"
                                    tools:layout_editor_absoluteY="70dp" />
                            </androidx.constraintlayout.widget.ConstraintLayout>

                        </LinearLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>